# docs/swagger.json
@@ -521,7 +521,7 @@
                     {
                         "type": "integer",
                         "description": "Expiration in minutes",
-                        "name": "expiry",
+                        "name": "expiryMinutes",
                         "in": "formData"
                     }
                 ],
@@ -529,8 +529,7 @@
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "type": "object",
-                            "additionalProperties": true
+                            "$ref": "#/definitions/handlers.UploadResponse"
                         }
                     },
                     "400": {
@@ -657,6 +656,55 @@
                 "message": {
                     "description": "Error message",
                     "type": "string"
+                }
+            }
+        },
+        "handlers.UploadResponse": {
+            "type": "object",
+            "properties": {
+                "results": {
+                    "type": "array",
+                    "items": {
+                        "$ref": "#/definitions/handlers.UploadResult"
+                    }
+                }
+            }
+        },
+        "handlers.UploadResult": {
+            "type": "object",
+            "properties": {
+                "expiryTime": {
+                    "type": "string"
+                },
+                "filename": {
+                    "type": "string"
+                },
+                "format": {
+                    "type": "string"
+                },
+                "id": {
+                    "type": "string"
+                },
+                "message": {
+                    "type": "string"
+                },
+                "orientation": {
+                    "type": "string"
+                },
+                "status": {
+                    "type": "string"
+                },
+                "tags": {
+                    "type": "array",
+                    "items": {
+                        "type": "string"
+                    }
+                },
+                "urls": {
+                    "type": "object",
+                    "additionalProperties": {
+                        "type": "string"
+                    }
                 }
             }
         }
